some js logic updates

--- a/develop/page_data/project-sale-page.json
+++ b/develop/page_data/project-sale-page.json
@@ -28,14 +28,13 @@
                 "Хабаровск"
             ], 
             "ownerType": [
-                "ИП",
-                "ООО",
-                "ОАО",
-                "ЗАО"
+                {"text": "Физическое лицо", "type": 1},
+                {"text": "ИП", "type": 1},
+                {"text": "Юридическое лицо", "type": 2}
             ],
             "nds": [
-                "С НДС",
-                "Без НДС"
+                "Без НДС",
+                "С НДС"
             ],
             "payment1": [
                 "кадастровая<br>стоимость",
