js logic updates

--- a/develop/page_data/project-sale-page.json
+++ b/develop/page_data/project-sale-page.json
@@ -9,10 +9,7 @@
                 "Складское помещение",
                 "Складское здание"
             ],
-            "taxType": [
-                "Упрощенная система",
-                "Общая система"
-            ],
+            "taxType": ["Упрощенная система", "Общая система"],
             "cities": [
                 "Москва",
                 "Санкт-Петербург",
@@ -26,24 +23,18 @@
                 "Пермь",
                 "Владивосток",
                 "Хабаровск"
-            ], 
+            ],
             "ownerType": [
-                {"text": "Физическое лицо", "type": 1},
-                {"text": "ИП", "type": 1},
-                {"text": "Юридическое лицо", "type": 2}
+                { "text": "Физическое лицо", "type": 1 },
+                { "text": "ИП", "type": 1 },
+                { "text": "Юридическое лицо", "type": 2 }
             ],
             "nds": [
-                "Без НДС",
-                "С НДС"
+                { "text": "Без НДС", "type": 1 },
+                { "text": "С НДС", "type": 2 }
             ],
-            "payment1": [
-                "кадастровая<br>стоимость",
-                "арендная<br>плата"
-            ],
-            "payment2": [
-                "арендная<br>плата",
-                "кадастровая<br>стоимость"
-            ]
+            "payment1": ["кадастровая<br>стоимость", "арендная<br>плата"],
+            "payment2": ["арендная<br>плата", "кадастровая<br>стоимость"]
         }
     }
 }
